# Business-Process-Automation-with-CrewAI

./: .env  .env.example  README.md  config.py  install_kickoff.ps1  install_poetry.ps1  pip.conf  pyproject.toml  requirements.txt  run_main.py  setup.py
.github/workflows/: main.yml  main.yml.bak
src/myfirstcrewaiproject/: __init__.py  app.py  main.py
src/myfirstcrewaiproject/agents/: research_agents.py
src/myfirstcrewaiproject/tasks/: research_tasks.py
src/myfirstcrewaiproject/tools/: custom_tools.py
